crates/deadline-cli/tests/cli/snapshots/cli__suggest__fleet_get_error_suggests_fleets_not_workers.snap
---
source: crates/deadline-cli/tests/cli/suggest.rs
info:
  program: deadline
  args:
    - fleet
    - get
    - "--fleet-id"
    - fleet-bad
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51688"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51688"
    AWS_ENDPOINT_URL_S3: "http://localhost:51688"
    AWS_ENDPOINT_URL_STS: "http://localhost:51688"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp9miIjn/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp9miIjn
---
success: false
exit_code: 1
----- stdout -----
Failed to get Fleet from Deadline:
ResourceNotFoundException: No message
Available fleets in farm farm-abc:
  fleet-good  Good Fleet

----- stderr -----
