crates/deadline-cli/tests/cli/snapshots/cli__suggest__job_get_access_denied_suggests_jobs.snap
---
source: crates/deadline-cli/tests/cli/suggest.rs
info:
  program: deadline
  args:
    - job
    - get
    - "--job-id"
    - job-bad
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61845"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61845"
    AWS_ENDPOINT_URL_STS: "http://localhost:61845"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpJ0Xdcc/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpJ0Xdcc
---
success: false
exit_code: 1
----- stdout -----
Failed to get Job from Deadline:
ResourceNotFoundException: No message
Recent jobs in queue queue-abc:
  job-real  Real Job

----- stderr -----
