crates/deadline-cli/tests/cli/snapshots/cli__suggest__queue_get_error_suggests_queues_not_jobs.snap
---
source: crates/deadline-cli/tests/cli/suggest.rs
info:
  program: deadline
  args:
    - queue
    - get
    - "--queue-id"
    - queue-bad
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51683"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51683"
    AWS_ENDPOINT_URL_S3: "http://localhost:51683"
    AWS_ENDPOINT_URL_STS: "http://localhost:51683"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpYijq1h/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpYijq1h
---
success: false
exit_code: 1
----- stdout -----
Failed to get Queue from Deadline:
AccessDeniedException: No message
Available queues in farm farm-abc:
  queue-good  Good Queue

----- stderr -----
